--- a/toan-roi-rac/parts/basic-definition.tex
+++ b/toan-roi-rac/parts/basic-definition.tex
@@ -39,6 +39,15 @@ Một số khái niệm liên quan:
 \input{figures/do-thi-hai-phia-day-du-k23.tex}
 
 \begin{definition}
+	[Đồ thị thẳng] Đồ thị thẳng $P_n$ là đồ thị với tập đỉnh $V = \left\{v_1,v_2,\ldots,v_n\right\}$ và tập cạnh 	$E = \left\{v_1v_2,v_2v_3,v_3v_4,\ldots,v_{n-1}v_n\right\}$.
+\end{definition}
+
+\begin{definition}
+	[Đồ thị vòng] Đồ thị vòng $C_n$ giống với đồ thị thẳng, tuy nhiên có thêm cạnh $v_{n}v_1$.	
+\end{definition}
+\input{figures/do-thi-thang.tex}
+
+\begin{definition}
 	[Tập độc lập] Tập độc lập trong đồ thị $G$ được định nghĩa bởi ${S = \{v \in V(G) \mid \textnormal{không có cặp đỉnh nào kề nhau} \}}$
 \end{definition}
 
