Update nhap-mon: tong quan nganh hoc.

--- a/nhap-mon/root.tex
+++ b/nhap-mon/root.tex
@@ -37,10 +37,10 @@
 \section{Tổng quan về ngành học}
 \begin{frame}{\secname}	
 	\begin{itemize}
-		\item Các định hướng của ngành
-		\item Các kiến thức được trang bị
-		\item Toán tin ra trường làm những gì?
-		\item Đặc trưng của ngành
+		\item Toán tin là gì?
+		\item Toán tin có vai trò như nào trong thời đại này?
+		\item Các định hướng của ngành?
+		\item Sinh viên toán tin ra trường làm những gì?
 	\end{itemize}
 \end{frame}
 
