--- a/nhap-mon/speech.tex
+++ b/nhap-mon/speech.tex
@@ -16,13 +16,33 @@
 \begin{document}
 \section{Tổng quan về ngành học}
 Toán học là cơ sở cho bất kì lĩnh vực khoa học đương đại nào.
+\textbf{Toán tin là gì}
+Toán Tin, ngay ở cái tên của nó đã nói lên tất cả, đây là một ngành khoa học liên ngành giữa Toán và Tin học. Toán trong Toán Tin vì thế cũng đặc biệt quan tâm đến những nguyên lý cơ bản đằng sau thuật toán, cách thức xử lý thông tin, hoặc sử dụng máy tính, phần mềm như công cụ để giải quyết các bài toán tính toán cụ thể.
+
+\textbf{Vai trò của toán tin trong thời đại này}
+Toán học là một ngành khá đặc biệt, vì những ứng dụng của nó vừa có thể được sử dụng một một cách trực tiếp, vừa có thể sử dụng như cơ sở một số ngành khác. Toán thì không thiếu ứng dụng, nhưng với ngành học của chúng ta thì bọn em xin trình bày chủ yếu về "toán và tin".
+
+Sự phát triển của máy móc, đặc biệt là máy tính đã làm thay đổi cuộc sống của con người. Nó cung cấp những phần mềm, công cụ hữu ích trong việc lao động, sản xuất, giao tiếp, giải trí, sinh hoạt,\ldots Vậy cái gì đã tạo nên những phần mềm đó. Có người nghĩ là những đoạn mã nguồn do các lập trình viên dùng những ngôn ngữ lập trình khác nhau viết ra. Nhưng suy cho cùng, ngôn ngữ lập trình, cũng như bao ngôn ngữ khác, chỉ đảm nhận vai trò \textit{giao tiếp} (ở đây là giữa người với máy).
+
+Giả sử, ta bảo với một người sống ở 2000 năm trước rằng "bật cho tôi cái tv", dù có dùng ngôn ngữ họ hiểu được, thì họ cũng không thực hiện được vì bản thân người đó không có hiểu biết về vật tên là "cái tv", hay "bật tv" là cái gì. Theo lẽ đó, làm thế nào để một cái máy pha cà phê -- một vật vô tri -- có thể pha cà phê bằng một dòng lệnh như kiểu \texttt{Coffee.make(capuchino)}? Đây chính là nhiệm vụ của \textit{toán học} -- xử lý những logic đằng sau những dòng lệnh trên. 
+
+Vậy có thể thấy rằng vai trò của toán học là vô cùng quan trọng, nó chính là linh hồn, của những chương trình. Trong thời đại hiện nay, với những công nghệ mới xuất hiện, những hệ quản trị tinh vi được cấu hình sẵn, đặc biệt hơn nữa, thứ được gọi là "máy học", việc xây dựng những chương trình trở nên đơn giản. Điều này khiến cho những chương trình phổ thông trở nên bão hòa, gần như ai cũng có thể tự xây dựng phần mềm của mình. Tuy nhiên, không phải ai cũng xây dựng được những phần mềm \textit{tốt}, vì điều này cần một thứ mà máy móc chưa làm được: ứng dụng toán học một cách linh hoạt. Do đó, vai trò của toán học trong thời đại ngày nay ngày càng to lớn. 
 
 \textbf{Các định hướng của ngành Toán -- Tin}
 \begin{itemize}
-	\item Toán cơ bản (toán nghiên cứu -- lý thuyết)
-	\item Toán ứng dụng
-	\item Tin học
+	\item Toán thuần túy: Toán lý thuyết nghiên cứu những lĩnh vực và giải quyết vấn đề mà tự thân nó đưa ra.
+	\item Toán ứng dụng: Toán ứng dụng nghiên cứu cơ sở toán trong các ngành khoa học khác như Tin học, Vật lý, Y sinh,\ldots và ứng dụng của các lý thuyết này trong thế giới thực. bằng việc tìm ra vấn đề, mô hình hóa, giải quyết bài toán,\ldots
 \end{itemize}
+
+\textbf{So sánh Toán -- Tin với một số ngành khác}.
+
+\textit{Khoa học máy tính} tìm cách giao tiếp với máy tính, cách tính toán khoa học,\ldots
+
+\textit{Kĩ thuật máy tính} kết nối các thành phần của hệ thông máy tính với nhau, đồng bộ giữa các phần cứng và cả phần mềm chạy trên nó.
+
+\textit{Công nghệ thông tin} là ngành khoa học nghiên cứu về việc ứng dụng công nghệ để xử lý thông tin.
+
+\textit{Toán tin} có thể xem là hàm chứa những kiến thức cốt lõi của Khoa học máy tính và Kỹ thuật máy tính.
 
 \textbf{Các kiến thức được trang bị}\par
 Cung cấp tư duy logic, kiến thức nền tảng toán: giải tích, đại số tuyến tính, xác suất thống kê, tối ưu hóa, phương pháp tính, tối ưu tổ hợp, mô hình hóa, mô phỏng\ldots để mô hình hóa và giải quyết các bài toán thực tiễn như:
@@ -36,9 +56,20 @@ Cung cấp tư duy logic, kiến thức nền tảng toán: giải tích, đại
 
 Cung cấp kiến thức nền tảng về tin học: cấu trúc dữ liệu, giải thuật, thuật toán, độ phức tạp, kĩ thuật lập trình, bảo mật, mạng máy tính\ldots
 
-\textbf{Điểm khác nhau giữa Toán -- Tin và Công Nghệ Thông Tin}\par
-
-\textbf{Toán tin ra trường làm gì?}\par
+\textbf{Sinh viên toán tin ra trường làm gì?}
+\begin{itemize}
+	\item Các công ty, tập đoàn phần mềm
+	\item Các viện nghiên cứu, các trường đại học
+	\item Trung tâm Công nghệ thông tin, Phòng Tin học, Phòng Nghiên cứu khoa học, Phòng Thống kê, các đơn vị quản lý\ldots của:
+		\begin{itemize}
+			\item Các ngân hàng, công ty bảo hiểm, tập đoàn tài chính
+			\item Các tập đoàn bưu chính viễn thông
+			\item Các cơ quan hành chính nhà nước
+			\item Các nhà máy, xí nghiệp, các doanh nghiệp\ldots
+		\end{itemize}
+	\item Bộ phận thống kê phân tích, dự báo, quản trị rủi ro, thẩm định đầu tư, định phí\ldots tại các ngân hàng, công ty tài chính, bảo hiểm, các doanh nghiệp\ldots
+	\item Bộ phận nghiên cứu và ứng dụng toán trong giao thông, viễn thông, thủy lợi, nông nghiệp, công nghiệp, y tế\ldots
+\end{itemize}
 
 \section{Giả thuyết Riemann}
 
