--- a/cover.tex
+++ b/cover.tex
@@ -13,13 +13,13 @@
 		{\LARGE Trường Đại học Bách khoa Hà Nội\par}
 		{\Large Viện Toán ứng dụng và Tin học}
 	}
-	\vfill
+	\vfill\vfill
 	\begin{center}
-		{\Large Bài tập Giải tích phức:}\par
-		{\LARGE Một số ứng dụng của lý thuyết thặng dư}
+		{\Large Báo cáo Toán rời rạc}\par
+		{\LARGE Đồ thị Euler và một số ứng dụng}\par
 		\vfill
 		\textit{Sinh viên thực hiện:}\\
-		Nguyễn Công Đoàn -- 20173496
+		Đỗ Ngọc Dũng -- 20176726
 		\vfill
 		Hà Nội, tháng 5 năm 2019
 	\end{center}
