--- a/nhap-mon/root.tex
+++ b/nhap-mon/root.tex
@@ -20,14 +20,20 @@
 \title{Báo cáo nhập môn toán tin}
 \date{Ngày 20 tháng 05 năm 2019}
 \author{
-	Đỗ Ngọc Dũng -- 2017\\
-	Nguyễn Đức Hùng -- 20173520\\
-	Phùng Anh Hùng -- 2017\\
-	Ngô Việt Trung -- 2017
 }
 \begin{document}
 \begin{frame}
-	\maketitle
+	\begin{center}
+		\vfill
+		{\Huge \color{primary}{Báo cáo nhập môn toán tin}}\par
+		\vfill
+		Đỗ Ngọc Dũng -- 20176726\\
+		Nguyễn Đức Hùng -- 20173520\\
+		Phùng Anh Hùng -- 20173150\\
+		Ngô Việt Trung -- 20173415
+		\vfill
+		Ngày 20 tháng 05 năm 2019
+	\end{center}
 \end{frame}
 
 \begin{frame}{Mục lục}
@@ -40,20 +46,19 @@
 		\item Toán tin là gì?
 		\item Toán tin có vai trò như nào trong thời đại này?
 		\item Các định hướng của ngành?
-		\item Sinh viên toán tin ra trường làm những gì?
 	\end{itemize}
 \end{frame}
 
-\section{Kĩ năng phát triển bản thân}
-\begin{frame}{\secname}
+\begin{frame}{Sinh viên Toán tin ra trường làm gì}
 	\begin{itemize}
-		\item Các chỉ số IEAQ
-		\item Mô hình phát triển con người ASK
-		\item Phương pháp học LIPE
-		\item Nguyên tắc đặt mục tiêu SMART
-		\item Tháp nhận thức Bloom
-		\item Tháp nhu cầu Maslow
-	\end{itemize}	
+		\item Lập trình viên
+		\item Phân tích tài chính
+		\item Phát triển hệ thống
+		\item Giám đốc công nghệ thông tin 
+		\item Bảo mật và an toàn thông tin
+		\item Nghiên cứu viên/giảng viên
+		\item \ldots
+	\end{itemize}
 \end{frame}
 
 \section{Toán ứng dụng trong thực tế}
@@ -73,7 +78,26 @@
 \begin{frame}{\secname}
 	\begin{itemize}
 		\item Lịch sử nghiên cứu
-		\item Hàm $\zeta$ và phương trình hàm $\zeta$
+		\item Hàm $\zeta$
+			\begin{equation*}
+				\zeta(s)=\sum_{n=1}^\infty \frac{1}{n^s} = \prod_p \frac{1}{1-p^{-s}}
+			\end{equation*}
+		\item Phương trình hàm $\zeta$
+			\begin{equation*}
+				\zeta(s) = \frac{s}{s-1}- s \int_{1}^{\infty} \frac{\{x\}}{x^{s+1}}dx
+			\end{equation*}
+	\end{itemize}	
+\end{frame}
+
+\section{Kĩ năng phát triển bản thân}
+\begin{frame}{\secname}
+	\begin{itemize}
+		\item Các chỉ số IEAQ
+		\item Mô hình phát triển con người ASK
+		\item Phương pháp học LIPE
+		\item Nguyên tắc đặt mục tiêu SMART
+		\item Tháp nhận thức Bloom
+		\item Tháp nhu cầu Maslow
 	\end{itemize}	
 \end{frame}
 \end{document}
