--- a/cover.tex
+++ b/cover.tex
@@ -1,8 +1,9 @@
-\documentclass[14pt]{article}
+\documentclass[14pt]{extarticle}
 \usepackage[vietnamese]{babel}
 \usepackage{inputenc}
 \usepackage{calc}
 \usepackage{graphicx}
+\usepackage[a4paper]{geometry}
 
 \begin{document}
 \begin{titlepage}
@@ -15,11 +16,14 @@
 	}
 	\vfill\vfill
 	\begin{center}
-		{\Large Báo cáo Toán rời rạc}\par
-		{\LARGE Đồ thị Euler và một số ứng dụng}\par
+		{\Large Báo cáo Nhập môn toán tin}\par
+		{\LARGE Tổng hợp kiến thức đã học trong kì 20182}\par
 		\vfill
 		\textit{Sinh viên thực hiện:}\\
-		Đỗ Ngọc Dũng -- 20176726
+		Đỗ Ngọc Dũng -- 20176726\\
+		Nguyễn Đức Hùng -- 20173520\\
+		Phùng Anh Hùng -- 20173150\\
+		Ngô Việt Trung -- 20173415
 		\vfill
 		Hà Nội, tháng 5 năm 2019
 	\end{center}
