Format toan-roi-rac???

--- a/toan-roi-rac/parts/basic-definition.tex
+++ b/toan-roi-rac/parts/basic-definition.tex
@@ -48,7 +48,7 @@ Một số khái niệm liên quan:
 \input{figures/do-thi-thang.tex}
 
 \begin{definition}
-	[Tập độc lập] Tập độc lập trong đồ thị $G$ được định nghĩa bởi ${S = \{v \in V(G) \mid \textnormal{không có cặp đỉnh nào kề nhau} \}}$
+	[Tập độc lập] Tập độc lập trong đồ thị $G$ là tập con của $V(G)$ mà trong đó không có hai đỉnh kể nhau.
 \end{definition}
 
 \begin{definition}
