--- a/toan-roi-rac/parts/path-and-cycle.tex
+++ b/toan-roi-rac/parts/path-and-cycle.tex
@@ -30,7 +30,7 @@ Một cạnh của $G$ là cạnh cắt $\iff$ cạnh đó không thuộc chu tr
 	\end{proof}
 \end{proposition}
 
-\begin{corolarry} Mọi đồ thị $G$ mà chứa ít nhất một cạnh thì có ít nhất hai đỉnh không phải là đỉnh cắt\end{corolarry}
+\begin{corollary} Mọi đồ thị $G$ mà chứa ít nhất một cạnh thì có ít nhất hai đỉnh không phải là đỉnh cắt\end{corollary}
 \begin{theorem}
 Một đồ thị là một đồ thị hai phía $\iff$ nó không chứa chu trình độ dài lẻ.	
 \begin{proof}
