--- a/toan-roi-rac/root.tex
+++ b/toan-roi-rac/root.tex
@@ -15,7 +15,9 @@
 \begin{document}
 \pagenumbering{roman}\pagestyle{plain}
 \pagestyle{fancy}
-\lhead{\it Cơ bản lý thuyết đồ thị}
+\lhead{\thepage}
+\cfoot{}
+\renewcommand{\footrulewidth}{0pt}
 \begin{titlepage}
 	\begin{minipage}[c]{4em}
 		\includegraphics[width=3em]{resources/bk.jpg}
