--- a/toan-roi-rac/root.tex
+++ b/toan-roi-rac/root.tex
@@ -15,9 +15,7 @@
 \begin{document}
 \pagenumbering{roman}\pagestyle{plain}
 \pagestyle{fancy}
-\lhead{\thepage}
-\cfoot{}
-\renewcommand{\footrulewidth}{0pt}
+\lhead{}
 \begin{titlepage}
 	\begin{minipage}[c]{4em}
 		\includegraphics[width=3em]{resources/bk.jpg}
