--- a/resume/cv.tex
+++ b/resume/cv.tex
@@ -1,8 +1,10 @@
 \documentclass[11pt]{article}
-\usepackage[utf8]{vietnam}
-\usepackage[a4paper, margin=2cm]{geometry}
+% \usepackage[utf8]{vietnam}
+\usepackage[a4paper, total={6in,9in}]{geometry}
+\usepackage{hyperref}
 \usepackage{titlesec}
 \usepackage{titling}
+\usepackage{xcolor}
 \usepackage[T1]{fontenc}
 \usepackage[usefilenames,% Important for XeLaTeX
 RMstyle=Light,
@@ -11,39 +13,58 @@ TTstyle=Light,
 DefaultFeatures={Ligatures=Common}
 ]{plex-otf} %
 \setlength{\parindent}{0pt}
-
+\newfontfamily{\FAFR}{Font Awesome 5 Free Regular}
+\newfontfamily{\FAFS}{Font Awesome 5 Free Solid}
+\newfontfamily{\FAB}{Font Awesome 5 Brands Regular}
+\newcommand{\infopadding}{\hspace{0.5em}}
+\newcommand{\faEmail}[1]{{\FAFR \symbol{"F0E0}}\,{\sffamily #1}} % Email
+\newcommand{\faPhone}[1]{\FAFS \symbol{"F3CD}\,{\sffamily #1}} % Phone
+\newcommand{\faLinkedin}[1]{\FAB \symbol{"F08C}\,{\sffamily #1}} % Linkedin
+\newcommand{\faGithub}[1]{\FAB \symbol{"F09B}\,{\sffamily #1}} % Github
+\newcommand{\faStackOverflow}[1]{\FAB \symbol{"F16C}\,{\sffamily #1}} % StackOverflow
+\newcommand{\faLocation}[1]{\FAFS \symbol{"F3C5}\,{\sffamily #1}} % location
 
 \titleformat{\section}
-{\vspace{2em}\rmfamily\LARGE}
+{\vspace{1em}\rmfamily\LARGE}
 {}
 {1em}
-{}[\titlerule]
+{\MakeUppercase}[\titlerule]
 \titleformat{\subsection}
-{\bfseries\large}
-{$\bullet$}
-{0.5em}
+{\sffamily\bfseries\large}
+{}
+{1em}
 {}
 \thispagestyle{empty}
 
 \renewcommand{\maketitle}{
   \begin{center}
-    {\LARGE\theauthor}
-    \vspace{0.25em}
+    {\rmfamily\huge\theauthor}
+    \vspace{0.5em}
 
-    {\sffamily ndgnuh@protonmail.com -- https://github.com/ndgnuh}
+    {\sffamily \hfill
+      \faEmail{ndgnuh@protonmail.com} \hfill
+      \faGithub{\href{https://github.com/ndgnuh}{ndgnuh}}\hfill
+      \faPhone{84 91 886 2545}\hfill
+      \faLocation{Long Biên, Hà Nội}\hfill
+    }
   \end{center}
 }
 
-\newcommand{\entry}[4]{
+\newcommand{\cventry}[4]{
   \begin{minipage}[t]{0.25\textwidth}
     \hfill #1 
   \end{minipage}
   \hfill\vline\hfill
   \begin{minipage}[t]{0.7\textwidth}
-    {\large\bfseries #2}\\
-    {\it #3}\\#4
+    {\large\sffamily\bfseries #2}\\
+    {\it \MakeUppercase{#3}}
+    \ifx&#4&%
+      ~
+    \else
+      \\#4
+    \fi
   \end{minipage}
-  \par\vspace{0.5em}
+  \par\vspace{1em}
 }
 
 \begin{document}
@@ -51,29 +72,35 @@ DefaultFeatures={Ligatures=Common}
 \author{\sffamily Nguyễn Đức Hùng}
 \maketitle
 
-\section{NGHỀ NGHIỆP}
-\entry{6/2018 -- 9/2018}{Thực tập viên -- lập trình viên}{CÔNG TY CỔ PHẦN TRUYỀN THÔNG KHỞI ĐẦU MỚI}{
+\section{Kinh nghiệm làm việc}
+\cventry{6/2018 -- 9/2018}{Thực tập viên -- lập trình viên}{CÔNG TY CỔ PHẦN TRUYỀN THÔNG KHỞI ĐẦU MỚI}{
   Viết mã nguồn cho ứng dụng điện thoại thông minh
 }
-\entry{3/2019 -- hiện tại}{Freelance -- cộng tác viên}{MỘT SỐ DỰ ÁN MÃ NGUỒN MỞ}{
-  \texttt{ibus-bamboo} -- tạo tài liệu và gói cài đặt cho một số distro linux\\
+\cventry{3/2019 -- Hiện tại}{Freelance -- người đóng góp}{MỘT SỐ DỰ ÁN MÃ NGUỒN MỞ}{
+  \texttt{ibus-bamboo} -- tạo tài liệu, gói cài đặt cho một số distro linux\\
   \texttt{awesomewm} -- đóng góp tính năng
 }
 
 \section{KỸ NĂNG}
 \subsection{Làm việc với máy tính}
 \begin{itemize}
-  \item Ngôn ngữ lập trình: \textit{python, c, lua, (một số) shellscript.}
-  \item Ngôn ngữ đánh dấu: HTML, Markdown, Latex.
-  \item Có khả năng làm việc với cả môi trường GUI và CLI.
-  \item Có khả năng làm việc với môi trường GNU/Linux.
+  \item Lập trình \textit{Python, C, Lua, (một số) Shell, JavaScript, PHP, MySQL} ở mức cơ bản
+  \item Thành thạo môi trường \textit{GNU/Linux}, làm việc được với cả GUI và CLI.
+  \item Tin học văn phòng ở mức cơ bản
+  \item Sử dụng các phần mềm chỉnh sửa ảnh như \textit{Photoshop, Gimp, Krita} ở mức cơ bản.
+  \item Các ngôn ngữ đánh dấu văn bản: \textit{Markdown, Latex}
 \end{itemize}
 
-\subsection{ngôn ngữ}%
-\label{sub:ngôn_ngữ}
+\subsection{Ngoại ngữ}%
+\begin{itemize}
+  \item Giao tiếp bằng tiếng Anh
+  \item Nghe và đọc hiểu tài liệu tiếng Anh
+\end{itemize}
+
 
 \section{HỌC VẤN}%
-\entry{8/2017 -- Hiện tại}{Sinh viên năm 2 -- ngành Toán tin }{Đại học Bách khoa Hà Nội}
+\cventry{8/2017 -- 1/2018}{Học viên -- hệ đào tạo lập trình viên quốc tế}{Học viện BKACAD}{Hoàn thành project 1: web quản trị sinh viên (PHP, MySQL)}
+\cventry{8/2017 -- Hiện tại}{Sinh viên năm 2 -- Toán tin -- chương trình tài năng }{Đại học Bách khoa Hà Nội}{Điểm CPA: 2.68}
 
 
 \end{document}
