--- a/resume/cv.tex
+++ b/resume/cv.tex
@@ -23,6 +23,7 @@
 \newcommand{\faGithub}[1]{\FAB \symbol{"F09B}\,{\sffamily #1}} % Github
 \newcommand{\faStackOverflow}[1]{\FAB \symbol{"F16C}\,{\sffamily #1}} % StackOverflow
 \newcommand{\faLocation}[1]{\FAFS \symbol{"F3C5}\,{\sffamily #1}} % location
+\newcommand{\hientai}{\textsc{Hiện tại}}
 
 \titleformat{\section}
 {\vspace{1em}\rmfamily\LARGE}
@@ -76,7 +77,7 @@
 \cventry{6/2018 -- 9/2018}{Thực tập viên -- lập trình viên}{CÔNG TY CỔ PHẦN TRUYỀN THÔNG KHỞI ĐẦU MỚI}{
   Viết mã nguồn cho ứng dụng điện thoại thông minh
 }
-\cventry{3/2019 -- Hiện tại}{Freelance -- người đóng góp}{MỘT SỐ DỰ ÁN MÃ NGUỒN MỞ}{
+\cventry{3/2019 -- \hientai}{Freelance -- người đóng góp}{MỘT SỐ DỰ ÁN MÃ NGUỒN MỞ}{
   \texttt{ibus-bamboo} -- tạo tài liệu, gói cài đặt cho một số distro linux\\
   \texttt{awesomewm} -- đóng góp tính năng
 }
@@ -100,7 +101,7 @@
 
 \section{HỌC VẤN}%
 \cventry{8/2017 -- 1/2018}{Học viên -- hệ đào tạo lập trình viên quốc tế}{Học viện BKACAD}{Hoàn thành project 1: web quản trị sinh viên (PHP, MySQL)}
-\cventry{8/2017 -- Hiện tại}{Sinh viên năm 2 -- Toán tin -- chương trình tài năng }{Đại học Bách khoa Hà Nội}{Điểm CPA: 2.68}
+\cventry{8/2017 -- \hientai}{Sinh viên năm 2 -- Toán tin -- chương trình tài năng }{Đại học Bách khoa Hà Nội}{Điểm CPA: 2.68}
 
 
 \end{document}
